--- a/public/tuiter/profile.html
+++ b/public/tuiter/profile.html
@@ -12,31 +12,37 @@
   <a href="navigation.html">Back</a>
 
   <h1>Tuiter</h1>
-  <h2>Edit Profile</h2>
+  <h2>Profile</h2>
 
   <a href="profile.html">Save</a>
 
   <img src="abstract-dotted-banner-background_1035-18160.webp" width="100%" height="200px" /> <br>
 
-  <form>
-    <input type="file" /> <br>
-    <img src="face.jpg" width="48px" height="48px" /> <br>
-    <input type="file" />
-    <hr>
 
-    <label>Name</label> <br>
-    <input value="WebDev"><br />
+  <img src="face.jpg" width="48px" height="48px" /> 
+  <a href="edit-profile.html">Edit profile</a>
 
-    <hr>
+  <h2>WebDev</h2>
 
-    <label>Bio</label> <br>
-    <textarea cols="50" rows="10">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lobortis fringilla ex vel suscipit.
-      Praesent at mi fermentum ipsum gravida posuere sed nec metus. Sed gravida euismod neque. Proin eget justo turpis.
-      Vestibulum ligula lacus, dignissim eget dolor in, sodales egestas diam. Aliquam lobortis massa vel pulvinar
-      vulputate. Ut molestie felis ut feugiat bibendum. Nullam dictum diam a vulputate venenatis. Fusce in egestas
-      lectus, vel sagittis sapien. Cras accumsan quam risus, eget semper metus convallis ac.</textarea> <br>
-  </form>
+  <p>@WebDev</p>
+
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lobortis fringilla ex vel suscipit.
+    Praesent at mi fermentum ipsum gravida posuere sed nec metus. Sed gravida euismod neque. Proin eget justo turpis.
+    Vestibulum ligula lacus, dignissim eget dolor in, sodales egestas diam. Aliquam lobortis massa vel pulvinar
+    vulputate. Ut molestie felis ut feugiat bibendum. Nullam dictum diam a vulputate venenatis. Fusce in egestas
+    lectus, vel sagittis sapien. Cras accumsan quam risus, eget semper metus convallis ac.</p>
+
+  <p>Joined August 2021</p>
+
+  <p><b>123</b> Following <b>234</b> Followers</p>
+
+  <ul>
+    <li><a href="tuits.html">tuit</a></li>
+    <li><a href="tuits-and-replies.html">reply</a></li>
+    <li><a href="media.html">reply</a></li>
+    <li><a href="likes.html">reply</a></li>
+  </ul>
 
 
 </body>
