Fixed profile and edit-profile pages according to feedback on A2

--- a/public/tuiter/edit-profile.html
+++ b/public/tuiter/edit-profile.html
@@ -24,8 +24,8 @@
     <input type="file" />
     <hr>
 
-    <label>Name</label> <br>
-    <input value="WebDev"><br />
+    <label for="user-full-name">Name</label> <br>
+    <input value="WebDev" id="user-full-name" placeholder="Name"><br />
 
     <hr>
 
