Fixed tweet button width

--- a/public/tuiter/explore.html
+++ b/public/tuiter/explore.html
@@ -71,8 +71,8 @@
         </div>
       </div>
 
-      <div class="col-auto mx-0 py-2">
-        <button class="btn btn-primary rounded-pill py-0 px-2">
+      <div class="row mx-0 py-2">
+        <button class="btn btn-primary rounded-pill py-0 px-2 w-100">
             Tweet
         </button>
       </div>
@@ -293,14 +293,6 @@
     </div>
 
   </div>
-
-
-  <!-- <div class="d-block d-sm-none fa-2x">XS</div>
-  <div class="d-none d-sm-block d-md-none fa-2x">S</div>
-  <div class="d-none d-md-block d-lg-none fa-2x">M</div>
-  <div class="d-none d-lg-block d-xl-none fa-2x">L</div>
-  <div class="d-none d-xl-block d-xxl-none fa-2x">XL</div>
-  <div class="d-none d-xxl-block fa-2x">XXL</div> -->
 
 </body>
 
