Fixed bottom border on profile section

--- a/public/tuiter/explore.html
+++ b/public/tuiter/explore.html
@@ -274,7 +274,7 @@
         </div>
       </div>
 
-      <div class="border border-bottom-0">
+      <div class="border">
         <div class="row py-2 px-2 position-relative">
           <div class="col-auto">
             <img class="wd-profile-image rounded-circle" src="tesla.png">
