Added links to Nav Bar and styling to the active element

--- a/public/tuiter/explore.html
+++ b/public/tuiter/explore.html
@@ -18,57 +18,57 @@
 
     <div class="col-xl-2 col-auto pt-3 px-0 wd-sidebar">
       <div class="border border-bottom-0">
-        <div class="row my-0 ps-3 w-100">
-          <div class="col-auto"><i class="fab fa-twitter"></i></div>
-        </div>
+        <a class="row my-0 ps-3 w-100 wd-nav-item" href='public\index.html'>
+          <div class="col-auto wd-nav-icon"><i class="fab fa-twitter"></i></div>
+        </a>
       </div>
       <div class="border border-bottom-0">
-        <div class="row my-0 ps-3 w-100">
-          <div class="col-auto"><i class="fas fa-home"></i></div>
+        <a class="row my-0 ps-3 w-100 wd-nav-item" href='home.html'>
+          <div class="col-auto wd-nav-icon"><i class="fas fa-home"></i></div>
           <div class="d-none d-xl-block col-auto">Home</div>
-        </div>
+        </a>
       </div>
-      <div class="border border-bottom-0">
-        <div class="row my-0 ps-3 w-100">
-          <div class="col-auto"><i class="fas fa-hashtag"></i></div>
+      <div class="border border-bottom-0 wd-nav-item-active">
+        <a class="row my-0 ps-3 w-100 wd-nav-item" href='#.html'>
+          <div class="col-auto wd-nav-icon"><i class="fas fa-hashtag"></i></div>
           <div class="d-none d-xl-block col-auto">Explore</div>
-        </div>
+        </a>
       </div>
       <div class="border border-bottom-0">
-        <div class="row my-0 ps-3 w-100">
-          <div class="col-auto"><i class="fas fa-bell"></i></div>
+        <a class="row my-0 ps-3 w-100 wd-nav-item" href='notifications.html'>
+          <div class="col-auto wd-nav-icon"><i class="fas fa-bell"></i></div>
           <div class="d-none d-xl-block col-auto">Notifications</div>
-        </div>
+        </a>
       </div>
       <div class="border border-bottom-0">
-        <div class="row my-0 ps-3 w-100">
-          <div class="col-auto"><i class="fas fa-envelope"></i></div>
+        <a class="row my-0 ps-3 w-100 wd-nav-item" href='messages.html'>
+          <div class="col-auto wd-nav-icon"><i class="fas fa-envelope"></i></div>
           <div class="d-none d-xl-block col-auto">Messages</div>
-        </div>
+        </a>
       </div>
       <div class="border border-bottom-0">
-        <div class="row my-0 ps-3 w-100">
-          <div class="col-auto"><i class="fas fa-bookmark"></i></div>
+        <a class="row my-0 ps-3 w-100 wd-nav-item" href='bookmarks.html'>
+          <div class="col-auto wd-nav-icon"><i class="fas fa-bookmark"></i></div>
           <div class="d-none d-xl-block col-auto">Bookmarks</div>
-        </div>
+        </a>
       </div>
       <div class="border border-bottom-0">
-        <div class="row my-0 ps-3 w-100">
-          <div class="col-auto"><i class="fas fa-list"></i></div>
+        <a class="row my-0 ps-3 w-100 wd-nav-item" href='lists.html'>
+          <div class="col-auto wd-nav-icon"><i class="fas fa-list"></i></div>
           <div class="d-none d-xl-block col-auto">Lists</div>
-        </div>
+        </a>
       </div>
       <div class="border border-bottom-0">
-        <div class="row my-0 ps-3 w-100">
-          <div class="col-auto"><i class="fas fa-user"></i></div>
+        <a class="row my-0 ps-3 w-100 wd-nav-item" href='profile.html'>
+          <div class="col-auto wd-nav-icon"><i class="fas fa-user"></i></div>
           <div class="d-none d-xl-block col-auto">Profile</div>
-        </div>
+        </a>
       </div>
       <div class="border">
-        <div class="row my-0 ps-3 w-100">
-          <div class="col-auto"><i class="fas fa-ellipsis-h"></i></div>
+        <a class="row my-0 ps-3 w-100 wd-nav-item" href='more.html'>
+          <div class="col-auto wd-nav-icon"><i class="fas fa-ellipsis-h"></i></div>
           <div class="d-none d-xl-block col-auto">More</div>
-        </div>
+        </a>
       </div>
 
       <div class="row mx-0 py-2">
