--- a/public/tuiter/navigation.html
+++ b/public/tuiter/navigation.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
+
 <body>
-  
+
   <a href="../../index.html">Back</a>
   <ul>
-    <li><a href="home.html">Home</a></li>
-    <li><a href="explore.html">Explore</a></li>
-    <li><a href="notifications.html">notifications</a></li>
-    <li><a href="messages.html">messages</a></li>
-    <li><a href="bookmarks.html">bookmarks</a></li>
-    <li><a href="lists.html">lists</a></li>
-    <li><a href="profile.html">profile</a></li>
-    <li><a href="tuit.html">tuit</a></li>
-    <li><a href="reply.html">reply</a></li>
+    <li><a href="/home.html">Home</a></li>
+    <li><a href="/explore.html">Explore</a></li>
+    <li><a href="/tuiter/ExploreScreen/explore.html">Explore (JS)</a></li>
+    <li><a href="/notifications.html">notifications</a></li>
+    <li><a href="/messages.html">messages</a></li>
+    <li><a href="/bookmarks.html">bookmarks</a></li>
+    <li><a href="/lists.html">lists</a></li>
+    <li><a href="/profile.html">profile</a></li>
+    <li><a href="/tuit.html">tuit</a></li>
+    <li><a href="/reply.html">reply</a></li>
   </ul>
 </body>
+
 </html>
